# stream-core-engine

./: CMakeLists.txt  README.md  server.crt  server.key
src/: AuthManager.cpp  AuthManager.h  Config.h  DatabaseManager.cpp  DatabaseManager.h  HttpParser.cpp  HttpParser.h  Server.cpp  Server.h  ThreadPool.cpp  ThreadPool.h  Utils.cpp  Utils.h  VideoManager.cpp  VideoManager.h  main.cpp
static/: index.html  script.js  style.css
